--- a/sound.html
+++ b/sound.html
@@ -17,9 +17,10 @@
 
         function loadSound() {
             var req = new XMLHttpRequest();
+            req.responseType = "arraybuffer";
             req.open("get", "./snare.wav");
             req.onload = function () {
-                alert(req.responseText);
+                console.log(req.response);
             };
             req.send();
         }
