--- a/sound.html
+++ b/sound.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-    <button onclick="playSound(sounds.snare);">Play</button>
+    <button onclick="playSound(sounds.kick);">Play</button>
 </body>
 
 </html>
