replay for 3 times

--- a/sound.html
+++ b/sound.html
@@ -53,17 +53,20 @@
 
         function playMusic() {
             var currentTime = audio.currentTime;
-            var startTime = currentTime;
             var unitTime = 0.2;
-            // 1, 5 kick
-            playSound(sounds.kick, startTime + 2 * unitTime);
-            playSound(sounds.kick, startTime + 4 * unitTime);
-            // 3, 7 snare
-            playSound(sounds.snare, startTime + 2 * unitTime);
-            playSound(sounds.snare, startTime + 6 * unitTime);
-            // 1~8 hihab
-            for (var i = 0; i < 7; i++) {
-                playSound(sounds.hihat, startTime + i * unitTime);
+
+            for (var bar = 0; bar < 3; bar++) {
+                var startTime = currentTime + bar * unitTime * 8;
+                // 1, 5 kick
+                playSound(sounds.kick, startTime + 2 * unitTime);
+                playSound(sounds.kick, startTime + 4 * unitTime);
+                // 3, 7 snare
+                playSound(sounds.snare, startTime + 2 * unitTime);
+                playSound(sounds.snare, startTime + 6 * unitTime);
+                // 1~8 hihab
+                for (var i = 0; i < 7; i++) {
+                    playSound(sounds.hihat, startTime + i * unitTime);
+                }
             }
 
         }
