making some audio changes

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
         var ga = {
             audio: null,
             res: {
-                sound: {
+                sounds: {
                     bullet: "./sound-bullet.mp3",
                     explosion: "./sound-explosion.mp3"
                 },
